[package]
name = "copo"
version = "0.1.1"
authors = ["MetallicSquid"]
license = "Apache-2.0"
description = "A command line pomodoro timer"
readme = "README.md"
homepage = "https://github.com/MetallicSquid/copo"
repository = "https://github.com/MetallicSquid/copo"
keywords = ["cli", "productivity", "pomodoro", "timer"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
structopt = "0.3.15"
failure = "0.1.8"
exitfailure = "0.5.1"
indicatif = "0.15.0"
console = "0.11.3"
mac-notification-sys = "0.1"
